--- a/client/src/styles/components/header.scss
+++ b/client/src/styles/components/header.scss
@@ -1,5 +1,5 @@
 .header {
-  background-color: $white;
+  background-color: $primary;
   height: 180px;
   overflow: hidden;
 }
@@ -7,4 +7,14 @@
 .header__logo {
   width: 100%;
   height: auto;
+}
+
+.header__container {
+  position: relative;
+}
+
+.header__row {
+  position: absolute;
+  width: 100%;
+  height: 100%;
 }
