all images loading

--- a/client/src/styles/base/index.scss
+++ b/client/src/styles/base/index.scss
@@ -1,4 +1,5 @@
 @import './bootstrap-grid.scss';
+@import './font-generics.scss';
 @import './margins-paddings.scss';
 @import './reset.scss';
 @import './widths-heights.scss';
