--- a/client/src/styles/base/vars.scss
+++ b/client/src/styles/base/vars.scss
@@ -3,3 +3,7 @@ $opposite: #000000;
 $body-background: #f6f6f6;
 $border-color: #e2e2e2;
 $focus-green: #83f3c6;
+$text-primary: #c6c6c6;
+
+$font-neutra: 'Neutraface';
+$font-droid: 'Droid Serif Regular';
