--- a/client/src/styles/base/index.scss
+++ b/client/src/styles/base/index.scss
@@ -1,5 +1,12 @@
+@import './reset.scss';
+
 @import './bootstrap-grid.scss';
+
+@import './vars.scss';
+
 @import './font-generics.scss';
 @import './margins-paddings.scss';
-@import './reset.scss';
+@import './typographies.scss';
 @import './widths-heights.scss';
+
+@import './body.scss';
