--- a/client/src/styles/components/search-box.scss
+++ b/client/src/styles/components/search-box.scss
@@ -6,7 +6,8 @@
 .search-box__icon {
   position: absolute;
   top: 50%;
-  left: 10px;
+  left: 0;
+  padding-left: 10px;
   transform: translateY(-50%);
 }
 
